--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "express": "^4.18.2",
-    "node": "^20.5.0"
+    "node": "^20.5.0",
+    "nodemon": "^3.0.1"
   },
   "name": "primera-preentrega-pietrafesa",
   "version": "1.0.0",
