--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "node": "^20.5.0",
     "nodemon": "^3.0.1"
   },
