--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "node": "^20.5.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2"
   },
   "name": "primera-preentrega-pietrafesa",
   "version": "1.0.0",
